--- a/estilo/style.css
+++ b/estilo/style.css
@@ -103,9 +103,9 @@ main {
 div.video{
     background-color: var(--cor5);
     margin: 0px -20px 30px -20px;
-    margin: 0px 20px 0px -20px;
-    padding: 20px;
-    padding-bottom: 54.5%;
+    margin: 0px -20px 0px -20px;
+    padding: 20px 20px 20px 20px;
+    padding-bottom: 54%;
     position: relative;
 }
 
@@ -174,6 +174,7 @@ main img.pequena {
 
 aside{
     background-color: var(--cor1);
+    margin-top: 20px;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.445);
